[tool.poetry]
name = "code_workspace_voting_system_blockchain"
version = "0.1.0"
description = ""
authors = ["Janrey Licas <self.codexlink@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
